# causal5g

./: .env.example  .gitignore  CLAUDE.md  DEMO_DEEP_DIVE.md  DEVELOPMENT_LOG.md  Makefile  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
api/: control.py  frg.py  pc_causal.py  rae.py  slice_router.py
causal/engine/: granger.py  pc_algorithm.py  rcsm.py  rcsm.py.bak.day16  recalibrator.py
causal/graph/: dcgm.py
causal5g/: slice_topology.py
causal5g/causal/: attribution.py  discovery.py  pcmci.py  slice_ensemble.py
causal5g/graph/: bilevel_dag.py  cross_domain.py  hierarchical_dag.py  topology_prior.py
causal5g/observability/: __init__.py  metrics.py
causal5g/rca/: report.py
causal5g/remediation/: executor.py  policy_store.py  verifier.py
causal5g/telemetry/: pfcp_collector.py  sbi_collector.py  slice_kpi.py
docs/: arxiv_draft.md  causal5g_demo.html  causal5g_patent_demo.html  causal5g_patent_demo_v2.html  causal5g_patent_demo_v3.html  causal_graph_visualization.html  live_demo_day12e.txt  live_demo_day12e_smf_crash.txt  live_demo_day13_clean_run.txt  live_demo_day13_run.txt  live_demo_day13_smf.txt  live_demo_day13_smf_clean.txt  live_demo_smf_isolated.txt
evidence/day16/: summary.tsv
evidence/day16b/: README.md  summary.tsv
evidence/day16c/: README.md  summary.tsv
evidence/day17/: README.md  summary.tsv
evidence/day18/: README.md  day18_sweep.py
evidence/day19/: README.md  day19_sweep.py
evidence/day20/: day20_sweep.py
faults/: injector.py
infra/free5gc/: docker-compose.yml
infra/monitoring/: docker-compose.yml  otel-collector.yml
patent/: README.md
patent/drafts/: Causal5G_Lab_Notebook_v1.docx  Causal5G_Patent_Draft_v2.docx
scripts/: day16_fault_sweep.sh  day16_live_sweep.sh  day17_apply_patch.py  day17_sweep.sh  patent_demo_v_structure.py
tests/: conftest.py  test_granger.py  test_pc_algorithm.py  test_rae.py  test_rcsm_attribution.py  test_recalibrator.py  test_slice_topology.py  test_verifier_and_report.py
tests/rca/: test_report.py
(+293 files in other folders)
