[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "causal5g"
version = "0.1.0"
description = "Causal DAG-based real-time fault isolation for cloud-native 5G SA core networks"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Krishna Kumar Gattupalli" }]
requires-python = ">=3.10"
keywords = [
    "5G", "causal inference", "root cause analysis",
    "network slicing", "cloud-native", "PFCP", "SBI",
    "fault isolation", "causal DAG", "PCMCI"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "networkx>=3.2",
    "numpy>=1.26",
    "tigramite>=5.2",       # PCMCI causal discovery (Claim 4)
    "scipy>=1.12",
    "pandas>=2.1",
    "prometheus-client>=0.19",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.9",
]
orchestrator = [
    "kubernetes>=29.0",     # K8s API for NF scale-out (Claim 3)
]
servicemesh = [
    "grpcio>=1.62",         # Istio/Envoy telemetry gRPC
    "opentelemetry-sdk>=1.23",
]

[project.scripts]
causal5g = "causal5g.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["causal5g*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=causal5g --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
